Improve mod vault and adjust review model
Fixes #544

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -270,16 +270,13 @@ vault.liveReplays=Live Replays
 vault.replays.loading=Loading replays\u2026
 vault.replays.newest=Most Recent
 vault.replays.highestRated=Highest Rated
-vault.replays.mostWatched=Most Watched
 vault.replays.displayQuery=Display search query
 vault.replays.queryPrompt=Build a query above or enter one manually
 vault.replays.searchError=An error has occurred while searching for replays.
 vault.more=More\u2026
-modVault.searchPrompt=Search\u2026
 modVault.newestMods=Most recent
-modVault.popularMods=Most downloaded
-modVault.mostLikedMods=Most liked
-modVault.recommendedUidMods=Recommended UI mods
+modVault.highestRated=Highest rated
+modVault.highestRatedUiMods=Recommended UI mods
 modVault.install=Install
 modVault.uninstall=Uninstall
 modVault.installationFailed=Mod ''{0}'' could not be installed: {1}
@@ -348,8 +345,8 @@ map.updated=Updated
 map.maxPlayers=Max. players
 map.width=Width (in px)
 map.height=Height (in px)
-map.uploadedDateTime=Uploaded date/time
-map.updatedDateTime=Updated date/time
+map.uploadedDateTime=Uploaded
+map.updatedDateTime=Updated
 map.noDescriptionAvailable=The author did not provide a description
 
 mapPreview.name=Map Name: {0}
@@ -576,6 +573,16 @@ reviewScore.four=4
 reviewScore.three=3
 reviewScore.two=2
 reviewScore.one=1
+mod.displayName=Name
+mod.author=Author
+mod.uploadedDateTime=Uploaded
+mod.updatedDateTime=Updated
+mod.id=ID
+mod.uid=UID
+mod.type=Typ
+mod.ranked=Ranked
+mod.filename=Filename
+mod.version=Version
 UIDNotExecuted=UID binary could not be executed. It might have been removed, not found or inaccessible.
 replay.copyLink=Copy link
 game.showRatingChange=Show rating change
@@ -591,6 +598,12 @@ search.sort.ascending=ascending
 search.sort.descending=descending
 query.contains=contains
 search.sort=Sort by
+vault.mods.searchError=Mods could not be loaded
+noDateAvailable=No date available
+map.created=Created:
+modType.ui=Ui mod
+modType.sim=Sim mod
+menu.connect=Connecting
 gameChosen.invalidPath=Invalid path
 gameChosen.couldNotLocatedGame=The specified location does not contain a valid Supreme Commander: Forged Alliance installation.
 userInfo.statistics.errorLoading=Could not load statistics
