--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -150,11 +150,9 @@ login.progress.message=Anmelden\u2026
 
 vault.maps=Karten
 vault.mods=Mods
-modVault.searchPrompt=Suche\u2026
 modVault.newestMods=Neuste Mods
-modVault.popularMods=Populärste Mods
-modVault.mostLikedMods=Beliebteste Mods
-modVault.recommendedUidMods=Emfohlene UI Mods
+modVault.highestRated=Am positivsten
+modVault.highestRatedUiMods=Emfohlene UI Mods
 modVault.install=Installieren
 modVault.uninstall=Deinstallieren
 modVault.installationFailed=Mod ''{0}'' konnte nicht installiert werden: {1}
@@ -267,7 +265,6 @@ userInfo.ratingOverTime=Rating über Zeit
 userInfo.ratingHistory.1v1=1v1
 userInfo.ratingHistory.global=Global
 userInfo.achievements=Errungenschaften
-userInfo.tooltipFormat={0} ({1,number,#})
 userInfo.ratingFormat=Globales Rating: {0,number,#}\nRanglisten Rating: {1,number,#}
 
 achievements.mostRecent=Neuste Errungenschaften
@@ -418,7 +415,6 @@ vault.liveReplays=Live Replays
 vault.replays.loading=Lade Replays\u2026
 vault.replays.newest=Am neuesten
 vault.replays.highestRated=Am höchsten bewertet
-vault.replays.mostWatched=Am meisten gesehen
 
 mapVault.mostLikedMaps=Am beliebtesten
 
@@ -558,8 +554,8 @@ mapVault.installButtonFormat=Install ({0})
 map.unknownAuthor=Unbekannter Autor
 map.folderName=Verzeichnisname
 map.ranked=Gewertet
-map.uploadedDateTime=Hochgeladen am
-map.updatedDateTime=Aktualisiert am
+map.uploadedDateTime=Hinzugefügt
+map.updatedDateTime=Aktualisiert
 map.noDescriptionAvailable=Der Autor hat keine Beschreibung erfasst.
 updater.git.progressFormat={0} ({1,number,#}/{2,number,#})
 updater.downloadingFile=Lade {0} herunter
@@ -586,6 +582,22 @@ search.sort.ascending=aufsteigend
 search.sort.descending=absteigend
 query.contains=beinhaltet
 search.sort=Sortiere nach
+menu.connect=Verbinde
+mod.displayName=Name
+mod.author=Autor
+mod.uploadedDateTime=Hinzugefügt
+mod.updatedDateTime=Aktualisiert
+mod.id=ID
+mod.uid=UID
+mod.type=Typ
+mod.ranked=Gewertet
+mod.filename=Dateiname
+mod.version=Version
+vault.mods.searchError=Mods konnten nicht geladen werden
+noDateAvailable=Kein Datum verfügbar
+map.created=Erstellt:
+modType.ui=Ui Mod
+modType.sim=Sim Mod
 gameChosen.invalidPath=Ungültiger Pfad
 gameChosen.couldNotLocatedGame=Das gewählte Verzeichnis beinhaltet keine gültige Supreme Commander: Forged Alliance Installation.
 userInfo.achievements.errorLoading=Konnte Erfolge nicht laden
