--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -566,3 +566,5 @@ updater.patchingFile=Patche {0}
 achievement.stepsFormat={0,number,#}/{1,number,#}
 urlPreviewDescription={0} ({1})
 UIDNotExecuted=UID executable konnte nicht ausgeführt werden. Sie wurde möglicherweise entfernt, nicht gefunden oder der Zugriff verweigert.
+
+replay.copyLink=Kopiere Link
