Implement BiReUS updater
Fixes #586

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -362,7 +362,9 @@ chat.connecting.message=Connecting to chat\u2026
 updater.binary.taskTitle=Preparing game files
 updater.git.progressFormat={0} ({1,number,#}/{2,number,#})
 updater.git.checkingOut=Preparing game files
-updater.git.taskTitle=Downloading game files
+updater.taskTitle=Preparing game
+updater.downloadingFile=Downloading {0}
+updater.patchingFile=Patching {0}
 
 clientUpdateAvailable.notification=Client {0} is available ({1})
 clientUpdateAvailable.downloadAndInstall=Download
