--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -425,7 +425,7 @@ mapVault.mostLikedMaps=Am beliebtesten
 
 updater.binary.taskTitle=Bereite Spieldateien vor
 updater.git.checkingOut=Bereite Spieldateien vor
-updater.git.taskTitle=Lade Spieldateien herunter
+updater.taskTitle=Lade Spieldateien herunter
 
 user.status.hosting=Hostet: {0}
 user.status.waiting=Wartet in: {0}
