#572 Fix coop replay button

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -60,6 +60,7 @@ coop.leaderboard.singlePlayer=1 player
 coop.leaderboard.numberOfPlayersFormat={0,number,#} players
 coop.leaderboard.couldNotLoad=Co-Op leaderboard could not be loaded.
 coop.couldNotLoad=Co-Op missions could not be loaded: {0}
+coop.watchReplay=Watch
 
 ranked1v1.players=Players
 ranked1v1.play=Play
