--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -128,6 +128,7 @@ game.host=Host
 game.tooltip.teamTitle=Team {0} ({1,number,#})
 game.tooltip.teamTitleNoTeam=Kein Team
 game.tooltip.observers=Zuschauer
+game.join.passwordTitle=Dieses Spiel ist passwortgeschützt
 game.join.passwordPrompt=Passwort eingeben
 game.join.passwordWrong=Falsches Passwort
 game.start.couldNotStart=Das Spiel konnte nicht gestartet werden. Siehe Fehlermeldung unten.
@@ -537,4 +538,4 @@ reviewScore.three=3
 reviewScore.two=2
 reviewScore.one=1
 menu.connect=Verbinde
-game.join.passwordTitle=Dieses Spiel ist passwortgeschützt
+coop.watchReplay=Ansehen
