Filters out all players with less than 5 games played from the leaderboard.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -62,7 +62,7 @@ coop.leaderboard.couldNotLoad=Co-Op leaderboard could not be loaded.
 coop.couldNotLoad=Co-Op missions could not be loaded: {0}
 coop.watchReplay=Watch
 
-ranked1v1.players=Players
+ranked1v1.players=Players (with at least {0} games played)
 ranked1v1.play=Play
 ranked1v1.cancel=Cancel
 ranked1v1.choseFactions.title=Select factions
