Let JoinGameHelper retrieve stage from StageHolder
Fixes #591

--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -537,3 +537,4 @@ reviewScore.three=3
 reviewScore.two=2
 reviewScore.one=1
 menu.connect=Verbinde
+game.join.passwordTitle=Dieses Spiel ist passwortgeschützt
