--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -196,6 +196,7 @@ game.tooltip.teamTitle=Team {0} ({1,number,#})
 game.tooltip.teamTitleNoTeam=No Team
 game.tooltip.observers=Observers
 game.protected.symbol=\uF023
+game.join.passwordTitle=This game is password protected
 game.join.passwordPrompt=Enter game password
 game.join.passwordWrong=Incorrect password
 game.start.couldNotStart=The game could not be started. See error details below.
