--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -316,13 +316,11 @@ mapVault.upload.playersFormat={0,number,#}
 mapVault.upload.rankedConfirm=I confirm that this map is properly balanced and does not contain prohibited code. I'm aware that a violation results in a ban. Unchecking this results in an unranked map.
 mapVault.upload.retry=Retry
 mapVault.loadingMaps=Loading maps\u2026
-mapVault.searchPrompt=Search\u2026
 mapVault.mostLikedMaps=Most liked
 mapVault.newestMaps=Most recent
 mapVault.mostPlayed=Most played
 mapVault.installButtonFormat=Install ({0})
 mapVault.uninstall=Uninstall
-mapVault.loadError=Maps could not be loaded. See the error message below.
 
 mod.description=Description
 mod.comments=Comments
@@ -343,6 +341,7 @@ map.width=Width (in px)
 map.height=Height (in px)
 map.uploadedDateTime=Uploaded date/time
 map.updatedDateTime=Updated date/time
+map.noDescriptionAvailable=The author did not provide a description
 
 mapPreview.name=Map Name: {0}
 mapPreview.size={0,number,#} x {1,number,#}
