--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -190,9 +190,7 @@ mapVault.upload.sizeFormat={0,number,#}km x {1,number,#}km
 mapVault.upload.rankedConfirm=Ich bestätige, dass die Karte ausgeglichen ist und keinen verbotenen Code enthält. Ich bin mir bewusst, dass ein Verstoß einen Bann zur Folge hat. Beim Abwählen dieser Option werden Spiele auf dieser Karte nicht bewertet.
 mapVault.upload.retry=Erneut versuchen
 mapVault.loadingMaps=Lade Karte\u2026
-mapVault.searchPrompt=Suche\u2026
 mapVault.newestMaps=Am neuesten
-mapVault.install=Installieren
 mapVault.uninstall=Deinstallieren
 
 
@@ -537,5 +535,34 @@ reviewScore.four=4
 reviewScore.three=3
 reviewScore.two=2
 reviewScore.one=1
-menu.connect=Verbinde
 coop.watchReplay=Ansehen
+percentage={0,number,#.#}%
+bytesProgress={0} von {1}
+notAvailable=N/A
+main.vault=Vault
+ranked1v1.rankingFormat=#{0,number,#}
+statusBar.taskWithoutMessage.format={0}
+statusBar.taskWithMessage.format={0}: {1}
+chat.clanTagFormat=[{0}]
+chat.privateMessage.ratingFormat={0,number,#}
+chat.privateMessage.achievements.unlockedFormat={0,number,#}/{1,number,#}
+game.ratingFormat.minOnly=>={0,number,#}
+game.ratingFormat.maxOnly=<={0,number,#}
+game.ratingFormat.minMax={0,number,#} - {1,number,#}
+game.players.format={0,number,#}/{1,number,#}
+game.protected.symbol=\uF023
+game.idFormat=#{0,number,#}
+vault.more=More\u2026
+mapVault.upload.playersFormat={0,number,#}
+mapVault.installButtonFormat=Install ({0})
+map.unknownAuthor=Unbekannter Autor
+map.folderName=Verzeichnisname
+map.ranked=Gewertet
+map.uploadedDateTime=Hochgeladen am
+map.updatedDateTime=Aktualisiert am
+map.noDescriptionAvailable=Der Autor hat keine Beschreibung erfasst.
+updater.git.progressFormat={0} ({1,number,#}/{2,number,#})
+updater.downloadingFile=Lade {0} herunter
+updater.patchingFile=Patche {0}
+achievement.stepsFormat={0,number,#}/{1,number,#}
+urlPreviewDescription={0} ({1})
