Added a Label to the players bar in the rating distribution

--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -19,6 +19,7 @@ main.units=Einheiten
 leaderboard.failedToLoad=Rangliste konnte nicht geladen werden
 leaderboard.loading=Lade Rangliste\u2026
 
+ranked1v1.you=Du
 ranked1v1.players=Spieler (mit mindestens {0} Spielen)
 ranked1v1.play=Spielen
 ranked1v1.cancel=Abbrechen
