Shows ReplayDetail onGame Finished Fixes #154

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -562,3 +562,5 @@ reviewScore.two=2
 reviewScore.one=1
 UIDNotExecuted=UID binary could not be executed. It might have been removed, not found or inaccessible.
 replay.copyLink=Copy link
+game.ended=Did you enjoy "{0}"? Let other people know!
+game.rate=Rate it now
