--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -569,3 +569,5 @@ urlPreviewDescription={0} ({1})
 UIDNotExecuted=UID executable konnte nicht ausgeführt werden. Sie wurde möglicherweise entfernt, nicht gefunden oder der Zugriff verweigert.
 
 replay.copyLink=Kopiere Link
+game.ended=Hat dir das Spiel "{0}" gefallen? Teile deine Erfahrung!
+game.rate=Jetzt bewerten
