--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -120,7 +120,8 @@ chat.userContext.viewLiveReplay=Watch game
 chat.userContext.joinGame=Join game
 chat.userContext.viewReplays=View replays
 chat.userContext.inviteToGame=Invite to game
-chat.userContext.kick=Kick\u2026
+chat.userContext.kickGame=Kick from game\u2026
+chat.userContext.kickLobby=Kick from lobby\u2026
 chat.userContext.ban=Ban\u2026
 chat.sendMessageTask.title=Sending chat message\u2026
 chat.sendActionTask.title=Sending chat action\u2026
@@ -561,3 +562,6 @@ reviewScore.two=2
 reviewScore.one=1
 UIDNotExecuted=UID binary could not be executed. It might have been removed, not found or inaccessible.
 replay.copyLink=Copy link
+chat.userContext.reason=reason for ban
+chat.userContext.duration=duration for ban
+chat.userContext.success=sucessfully banned
