--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -73,7 +73,8 @@ chat.userContext.viewLiveReplay=Dem Spiel zuschauen
 chat.userContext.joinGame=Spiel beitreten
 chat.userContext.viewReplays=Zeige replays
 chat.userContext.inviteToGame=Zu Spiel einladen
-chat.userContext.kick=Kicken\u2026
+chat.userContext.kickGame=Aus aktuellen Spiel werfen\u2026
+chat.userContext.kickLobby=Aus der Lobby werfen\u2026
 chat.userContext.ban=Bannen\u2026
 chat.sendMessageTask.title=Sende Chat Nachricht\u2026
 chat.sendActionTask.title=Sende Chat Aktion\u2026
@@ -568,3 +569,6 @@ urlPreviewDescription={0} ({1})
 UIDNotExecuted=UID executable konnte nicht ausgeführt werden. Sie wurde möglicherweise entfernt, nicht gefunden oder der Zugriff verweigert.
 
 replay.copyLink=Kopiere Link
+chat.userContext.reason=reason
+chat.userContext.duration=duration
+chat.userContext.success=sucessfully banned
