Show the user how a game effected rating of the players Fixes #600 Fixes #597

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -562,5 +562,8 @@ reviewScore.two=2
 reviewScore.one=1
 UIDNotExecuted=UID binary could not be executed. It might have been removed, not found or inaccessible.
 replay.copyLink=Copy link
+game.showRatingChange=Show rating change
+game.notValid=The Game was not rated
+game.notRatedYet=Rating change is not yet available
 game.ended=Did you enjoy "{0}"? Let other people know!
 game.rate=Rate it now
