Fixes that Transistent Notifications are shown behind the Task Bar(discovered this along side the work). I enabled autofix. Enables you to sort in the replay and game vault. Enables you to search for items that contain a string. To do that I internally used the RE (regex) comparator, which I should not have done, however since this is not an Comparator, but embeding the text into "*", I cant do it with the structure you imposed otherwise...
Fixes #626

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -564,3 +564,6 @@ UIDNotExecuted=UID binary could not be executed. It might have been removed, not
 replay.copyLink=Copy link
 game.ended=Did you enjoy "{0}"? Let other people know!
 game.rate=Rate it now
+search.sort.ascending=ascending
+search.sort.descending=descending
+query.regex=contains
