--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -464,7 +464,7 @@ game.gameStatus.none=Keiner
 game.time=Wann
 game.duration=Dauer
 game.gameType=Spieltyp
-game.startTime=Starzeit
+game.startTime=Startzeit
 game.endTime=Endzeit
 game.validity=Gültigkeit
 game.victoryCondition=Siegesbedingung
@@ -574,3 +574,6 @@ game.notValid=Das Spiel wurde nicht gewertet
 game.notRatedYet=Das Rating ist noch nicht verfügbar
 game.ended=Hat dir das Spiel "{0}" gefallen? Teile deine Erfahrung!
 game.rate=Jetzt bewerten
+search.sort.ascending=aufsteigend
+search.sort.descending=absteigend
+query.regex=beinhaltet
