--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -576,4 +576,4 @@ game.ended=Hat dir das Spiel "{0}" gefallen? Teile deine Erfahrung!
 game.rate=Jetzt bewerten
 search.sort.ascending=aufsteigend
 search.sort.descending=absteigend
-query.regex=beinhaltet
+query.contains=beinhaltet
