--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -566,4 +566,4 @@ game.ended=Did you enjoy "{0}"? Let other people know!
 game.rate=Rate it now
 search.sort.ascending=ascending
 search.sort.descending=descending
-query.regex=contains
+query.contains=contains
