sort tiles Fixes #622

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -567,3 +567,4 @@ game.rate=Rate it now
 search.sort.ascending=ascending
 search.sort.descending=descending
 query.contains=contains
+search.sort=Sort by
