--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -577,3 +577,4 @@ game.rate=Jetzt bewerten
 search.sort.ascending=aufsteigend
 search.sort.descending=absteigend
 query.contains=beinhaltet
+search.sort=Sortiere nach
