--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -421,6 +421,7 @@ userInfo.ratingHistory.global=Global
 userInfo.achievements=Achievements
 userInfo.tooltipFormat={0} ({1,number,#})
 userInfo.ratingFormat=Global Rating: {0,number,#}\nLeaderboard Rating: {1,number,#}
+userInfo.statisticsError=Error loading statistics
 user.status.hosting=Hosting: {0}
 user.status.waiting=Waiting in: {0}
 user.status.playing=Playing: {0}
