--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -578,3 +578,4 @@ search.sort.ascending=aufsteigend
 search.sort.descending=absteigend
 query.contains=beinhaltet
 search.sort=Sortiere nach
+userInfo.statisticsError=Fehler beim Laden der Statistiken
