Add a compact chat mode
Added options in settings to allow users to change between Extended and
Compact for the chat.

Fixes #638

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -486,6 +486,9 @@ settings.chat.previews=Preview
 settings.chat.previewImages=Preview image URLs on mouse over
 settings.chat.colors=Colors
 settings.chat.timeFormat=Time format
+settings.chat.chatFormat=Chat format
+settings.chat.chatFormat.extended=Extended
+settings.chat.chatFormat.compact=Compact
 settings.chat.colorMode.default=Default: Use default colors for all users
 settings.chat.colorMode.custom=Custom: Allow custom colors for specific users
 settings.chat.colorMode.random=Random: Every user has an unique, random color
