--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -310,6 +310,9 @@ settings.chat.previews=Vorschau
 settings.chat.previewImages=Vorschaubiler für Internet-Links anzeigen
 settings.chat.colors=Farben
 settings.chat.timeFormat=Zeitformat
+settings.chat.chatFormat=Chatformat
+settings.chat.chatFormat.extended=Erweitert
+settings.chat.chatFormat.compact=Kompakt
 settings.chat.colorMode.default=Standard: Benutze Standardfarben für alle Benutzer
 settings.chat.colorMode.custom=Benutzerdefiniert: Erlaube benutzerdefinierte Farben für spezifische Benutzer
 settings.chat.colorMode.random=Zufall: Jeder Benutzer erhält eine eindeutige, zufällige Farbe
