Improve how navigation works, show ladder maps
Fixes #650

--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -599,6 +599,9 @@ modType.ui=Ui Mod
 modType.sim=Sim Mod
 gameChosen.invalidPath=Ungültiger Pfad
 gameChosen.couldNotLocatedGame=Das gewählte Verzeichnis beinhaltet keine gültige Supreme Commander: Forged Alliance Installation.
+mapVault.ladder=Ladder maps
+ranked1v1.showMaps=Zeige mir 1v1 Karten
+news.showLadderMaps=Zeige mir 1v1 Karten
 userInfo.achievements.errorLoading=Konnte Erfolge nicht laden
 userInfo.achievements.errorLDisplaying=Konnte Erfolge nicht anzeigen
 userInfo.statistics.errorLoading=Konnte Statistiken nicht laden
