--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -611,3 +611,7 @@ settings.general.unitDatabase=Unit database
 unitDatabase.rackover=Rackover
 unitDatabase.spooky=Spooky
 game.player.rating=One of the player's ratings
+
+mapVault.ladder=Ladder maps
+news.showLadderMaps=Show ladder maps
+ranked1v1.showMaps=Show ladder maps
