Show statistics again Fixes #639

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -418,7 +418,10 @@ userInfo.losses=Losses
 userInfo.ratingOverTime=Rating over time
 userInfo.ratingHistory.1v1=1v1
 userInfo.ratingHistory.global=Global
+serInfo.statistics.errorLoading=Could not load statistics
 userInfo.achievements=Achievements
+userInfo.achievements.errorLoading=Could not load achievements
+userInfo.achievements.errorLDisplaying=Could not display achievements
 userInfo.tooltipFormat={0} ({1,number,#})
 userInfo.ratingFormat=Global Rating: {0,number,#}\nLeaderboard Rating: {1,number,#}
 user.status.hosting=Hosting: {0}
