--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -582,3 +582,6 @@ search.sort.ascending=aufsteigend
 search.sort.descending=absteigend
 query.contains=beinhaltet
 search.sort=Sortiere nach
+userInfo.achievements.errorLoading=Konnte Erfolge nicht laden
+userInfo.achievements.errorLDisplaying=Konnte Erfolge nicht anzeigen
+userInfo.statistics.errorLoading=Konnte Statistiken nicht laden
