Add player name history
Adds an overview of the name history to the user info window.
Fixes #35

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -424,6 +424,11 @@ userInfo.achievements.errorLoading=Could not load achievements
 userInfo.achievements.errorLDisplaying=Could not display achievements
 userInfo.tooltipFormat={0} ({1,number,#})
 userInfo.ratingFormat=Global Rating: {0,number,#}\nLeaderboard Rating: {1,number,#}
+userInfo.nameHistory=Name history
+userInfo.nameHistory.date=Date of change
+userInfo.nameHistory.noHistory=The user has never changed their name
+userInfo.nameHistory.name=Name
+userInfo.nameHistory.errorLoading=Name History could not be loaded.
 user.status.hosting=Hosting: {0}
 user.status.waiting=Waiting in: {0}
 user.status.playing=Playing: {0}
