--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -578,6 +578,10 @@ tiles.comparator.playersDescending=Sortiere absteigend nach Spielern
 tiles.comparator.playersAscending=Sortiere aufsteigend nach Spielern
 tiles.comparator.nameDescending=Sortiere absteigend nach Namen
 tiles.comparator.nameAscending=Sortiere aufsteigend nach Namen
+userInfo.nameHistory=Namen Historie
+userInfo.nameHistory.date=Zeitpunkt der Änderung
+userInfo.nameHistory.name=Name
+userInfo.nameHistory.noHistory=Benutzer hat seinen Namen nicht geändert
 search.sort.ascending=aufsteigend
 search.sort.descending=absteigend
 query.contains=beinhaltet
@@ -587,3 +591,4 @@ gameChosen.couldNotLocatedGame=Das gewählte Verzeichnis beinhaltet keine gültige
 userInfo.achievements.errorLoading=Konnte Erfolge nicht laden
 userInfo.achievements.errorLDisplaying=Konnte Erfolge nicht anzeigen
 userInfo.statistics.errorLoading=Konnte Statistiken nicht laden
+userInfo.nameHistory.errorLoading=Names Verlauf konnte nicht geladen werden.
