Add error on fa not started
Give the user a hint direct x might be missing
Fixes #681

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -595,3 +595,4 @@ search.sort.ascending=ascending
 search.sort.descending=descending
 query.contains=contains
 search.sort=Sort by
+fa.socketException=Forged Alliance was not properly started. No connection could be established to the game. It might have closed it-self. \nHint: A common cause for the game closing itself is having dependencies like direct x9.0c (https://www.microsoft.com/en-gb/download/details.aspx?id=35) not installed. Open the game's executable manually and check for errors shown.
