--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -578,3 +578,4 @@ search.sort.ascending=aufsteigend
 search.sort.descending=absteigend
 query.contains=beinhaltet
 search.sort=Sortiere nach
+fa.socketException=Forged Alliance wurde nicht ordnungsgemäß gestartet. Es konnte keine Verbindung zu dem Spiel herhgestellt werden. Möglicherweise hat sich das Programm selbst geschlossen.\nTip: Ein häufiger Grund dafür ist das Fehlen von Abhängigkeiten, wie direct x 9.0c (https://www.microsoft.com/en-gb/download/details.aspx?id=35). Sie können das Spiel manuell öffnen und überprüfen, ob es Fehlermeldungen anzeigt. 
