Improve game path selection
Improves Game Path selection. Shows a message if the Game Path was not set correctly.
Fixes #679

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -586,3 +586,6 @@ search.sort.ascending=ascending
 search.sort.descending=descending
 query.contains=contains
 search.sort=Sort by
+gameChosen.invalidPath=Invalid path
+gameChosen.couldNotLocatedGame=The specified location does not contain a valid Supreme Commander: Forged Alliance installation.
+userInfo.statistics.errorLoading=Could not load statistics
