--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -582,6 +582,8 @@ search.sort.ascending=aufsteigend
 search.sort.descending=absteigend
 query.contains=beinhaltet
 search.sort=Sortiere nach
+gameChosen.invalidPath=Ungültiger Pfad
+gameChosen.couldNotLocatedGame=Das gewählte Verzeichnis beinhaltet keine gültige Supreme Commander: Forged Alliance Installation.
 userInfo.achievements.errorLoading=Konnte Erfolge nicht laden
 userInfo.achievements.errorLDisplaying=Konnte Erfolge nicht anzeigen
 userInfo.statistics.errorLoading=Konnte Statistiken nicht laden
