Add option to hide games with mods
Added a checkbox to give user the option to hide modded games
Fixes #641

--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -95,6 +95,7 @@ games.create=Eröffne ein Spiel
 games.create.minRating=Min.
 games.create.maxRating=Max.
 games.showPasswordProtectedGames=Zeige passwortgeschützte Spiele
+games.showModdedGames=Zeige Spiele mit Mods
 games.noGamesAvailable=Es gibt keine offenen Spiele. Warum erstellst du nicht eines?
 games.couldNotJoin=Beitritt fehlgeschlagen. Siehe Fehlermeldung unten.
 
