Add option to hide games with mods
Added a checkbox to give user the option to hide modded games
Fixes #641

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -159,6 +159,7 @@ games.create=Create game
 games.create.minRating=Min.
 games.create.maxRating=Max.
 games.showPasswordProtectedGames=Show password protected games
+games.showModdedGames=Show games with mods
 games.noGamesAvailable=There are no open games. Why don't you create one?
 games.couldNotJoin=Game could not be joined. See error message below.
 game.create.connecting=Waiting for connection
