Reports via Email
Fixes #707

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -576,7 +576,7 @@ reviewScore.four=4
 reviewScore.three=3
 reviewScore.two=2
 reviewScore.one=1
-UIDNotExecuted=UID binary could not be executed. It might have been removed, not found or inaccessible.
+uidNotExecuted=UID binary could not be executed. It might have been removed, not found or inaccessible.
 replay.copyLink=Copy link
 game.showRatingChange=Show rating change
 game.notValid=The Game was not rated
@@ -594,3 +594,4 @@ search.sort=Sort by
 gameChosen.invalidPath=Invalid path
 gameChosen.couldNotLocatedGame=The specified location does not contain a valid Supreme Commander: Forged Alliance installation.
 userInfo.statistics.errorLoading=Could not load statistics
+menu.support=Support/Help
