--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -566,7 +566,7 @@ updater.downloadingFile=Lade {0} herunter
 updater.patchingFile=Patche {0}
 achievement.stepsFormat={0,number,#}/{1,number,#}
 urlPreviewDescription={0} ({1})
-UIDNotExecuted=UID executable konnte nicht ausgeführt werden. Sie wurde möglicherweise entfernt, nicht gefunden oder der Zugriff verweigert.
+uidNotExecuted=UID executable konnte nicht ausgeführt werden. Sie wurde möglicherweise entfernt, nicht gefunden oder der Zugriff verweigert.
 
 replay.copyLink=Kopiere Link
 game.showRatingChange=Show rating change
@@ -592,3 +592,4 @@ userInfo.achievements.errorLoading=Konnte Erfolge nicht laden
 userInfo.achievements.errorLDisplaying=Konnte Erfolge nicht anzeigen
 userInfo.statistics.errorLoading=Konnte Statistiken nicht laden
 userInfo.nameHistory.errorLoading=Names Verlauf konnte nicht geladen werden.
+menu.support=Support/Hilfe
