Fix wording of "Copy replay URL"

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -584,7 +584,7 @@ mod.ranked=Ranked
 mod.filename=Filename
 mod.version=Version
 UIDNotExecuted=UID binary could not be executed. It might have been removed, not found or inaccessible.
-replay.copyLink=Copy link
+replay.copyUrl=Copy replay URL
 game.showRatingChange=Show rating change
 game.notValid=The Game was not rated
 game.notRatedYet=Rating change is not yet available
