--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -563,8 +563,7 @@ updater.patchingFile=Patche {0}
 achievement.stepsFormat={0,number,#}/{1,number,#}
 urlPreviewDescription={0} ({1})
 UIDNotExecuted=UID executable konnte nicht ausgeführt werden. Sie wurde möglicherweise entfernt, nicht gefunden oder der Zugriff verweigert.
-
-replay.copyLink=Kopiere Link
+replay.copyUrl=Replay-URL kopieren
 game.showRatingChange=Show rating change
 game.notValid=Das Spiel wurde nicht gewertet
 game.notRatedYet=Das Rating ist noch nicht verfügbar
