Integrate Rackover's unit db
Store cookies via a custom CookieStore, that stores cookies in the preferences.
Fixes #728

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -607,4 +607,7 @@ menu.connect=Connecting
 gameChosen.invalidPath=Invalid path
 gameChosen.couldNotLocatedGame=The specified location does not contain a valid Supreme Commander: Forged Alliance installation.
 userInfo.statistics.errorLoading=Could not load statistics
+settings.general.unitDatabase=Unit database
+unitDatabase.rackover=Rackover
+unitDatabase.spooky=Spooky
 game.player.rating=One of the player's ratings
