--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -603,4 +603,8 @@ userInfo.achievements.errorLoading=Konnte Erfolge nicht laden
 userInfo.achievements.errorLDisplaying=Konnte Erfolge nicht anzeigen
 userInfo.statistics.errorLoading=Konnte Statistiken nicht laden
 userInfo.nameHistory.errorLoading=Names Verlauf konnte nicht geladen werden.
+settings.general.unitDatabase=Unit database
+unitDatabase.rackover=Rackover
+unitDatabase.spooky=Spooky
+
 game.player.rating=Eins der Spieler-Ratings
