Make online replays filterable with player rating
Adds rating as a searchable property and makes a little bugfix concerning Reflections during that procedure.
Fixes #731

--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -603,3 +603,4 @@ userInfo.achievements.errorLoading=Konnte Erfolge nicht laden
 userInfo.achievements.errorLDisplaying=Konnte Erfolge nicht anzeigen
 userInfo.statistics.errorLoading=Konnte Statistiken nicht laden
 userInfo.nameHistory.errorLoading=Names Verlauf konnte nicht geladen werden.
+game.player.rating=Eins der Spieler-Ratings
