--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -607,3 +607,4 @@ menu.connect=Connecting
 gameChosen.invalidPath=Invalid path
 gameChosen.couldNotLocatedGame=The specified location does not contain a valid Supreme Commander: Forged Alliance installation.
 userInfo.statistics.errorLoading=Could not load statistics
+game.player.rating=One of the player's ratings
