Let the user decides when he gets mentioned
Takes the changes from themasch and improves them.
Fixes #145

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -573,6 +573,8 @@ reviewScore.four=4
 reviewScore.three=3
 reviewScore.two=2
 reviewScore.one=1
+settings.chat.notifyOnAtMentionOnly=Only notify when mentioned via @username. 
+settings.chat.notifications=Notifications
 mod.displayName=Name
 mod.author=Author
 mod.uploadedDateTime=Uploaded
