Allow server properties to be configured on login
Fixes #761

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -15,6 +15,7 @@ back=Back
 notAvailable=n/a
 reset=Reset
 refresh=Refresh
+port=Port
 
 view.tiles=Tiles
 view.table=Table
@@ -261,6 +262,9 @@ login.forgot=Forgot login
 login.button.login=Login
 login.button.cancel=Cancel
 login.progress.message=Logging in\u2026
+login.serverHost=Server host
+login.replayServerHost=Replay server host
+login.apiBaseUrl=API base URL
 
 vault.maps=Maps
 vault.mods=Mods
