--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -6,6 +6,7 @@ cancel=Abbrechen
 dismiss=Verwerfen
 errorTitle=Oh oh!
 messageFromServer=Nachricht vom Server
+port=Port
 
 userMenu.logOut=Abmelden
 menu.feedback=Feedback
@@ -147,6 +148,9 @@ login.forgot=Anmeldedaten vergessen
 login.button.login=Anmelden
 login.button.cancel=Abbrechen
 login.progress.message=Anmelden\u2026
+login.serverHost=Server Host
+login.replayServerHost=Replayserver Host
+login.apiBaseUrl=API Basis-URL
 
 vault.maps=Karten
 vault.mods=Mods
