fixes #767 copy username in chat

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -113,6 +113,7 @@ chat.category.chatOnly=Chat only
 chat.userContext.noAvatar=No avatar
 chat.userContext.userInfo=Show user info
 chat.userContext.privateMessage=Private message
+chat.userContext.copyUsername=Copy username
 chat.userContext.removeColor=Remove custom color
 chat.userContext.addFriend=Add friend
 chat.userContext.removeFriend=Remove friend
