--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -66,6 +66,7 @@ chat.category.chatOnly=Nur Chat
 chat.userContext.noAvatar=Kein Avatar
 chat.userContext.userInfo=Zeige Benutzerinformationen
 chat.userContext.privateMessage=Private Nachricht
+chat.userContext.copyUsername=Kopiere Benutzernamen
 chat.userContext.removeColor=Entferne spezielle Farbe
 chat.userContext.addFriend=Zu Freunden hinzufügen
 chat.userContext.removeFriend=Von Freunden entfernen
