finishes #159 follow player

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -36,6 +36,7 @@ main.play=Play
 main.vault=Vault
 main.units=Units
 main.leaderboards=Leaderboards
+main.following=Following: {0}
 
 leaderboard.ranked1v1=1v1 Rating
 leaderboard.global=Global Rating
@@ -121,6 +122,7 @@ chat.userContext.addFoe=Add foe
 chat.userContext.removeFoe=Remove foe
 chat.userContext.viewLiveReplay=Watch game
 chat.userContext.joinGame=Join game
+chat.userContext.followPlayer=Follow player
 chat.userContext.viewReplays=View replays
 chat.userContext.inviteToGame=Invite to game
 chat.userContext.kick=Kick…
@@ -547,6 +549,8 @@ friend.nowOnlineNotification.action=Click here to start a conversation.
 friend.nowOfflineNotification.title={0} is now offline
 friend.joinedGameNotification.title={0} joined {1}
 friend.joinedGameNotification.action=Click here to join as well.
+followed.joinedGameNotification.title=Follow: Joining {0} into game: {1}...
+followed.joinedGameNotification.action=Click here to CANCEL joining.
 
 query.equals=is
 query.notEquals=is not
