--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -16,6 +16,7 @@ main.community.news=Neugikeiten
 main.chat=Chat
 main.play=Spielen
 main.units=Einheiten
+main.following=Folge: {0}
 
 leaderboard.failedToLoad=Rangliste konnte nicht geladen werden
 leaderboard.loading=Lade Rangliste…
@@ -74,6 +75,7 @@ chat.userContext.addFoe=Zu Feinden hinzufügen
 chat.userContext.removeFoe=Von Feinden entfernen
 chat.userContext.viewLiveReplay=Dem Spiel zuschauen
 chat.userContext.joinGame=Spiel beitreten
+chat.userContext.followPlayer=Spieler folgen
 chat.userContext.viewReplays=Zeige replays
 chat.userContext.inviteToGame=Zu Spiel einladen
 chat.userContext.kick=Kicken…
@@ -370,6 +372,8 @@ friend.nowOnlineNotification.action=Klicke hier um eine Konversation zu starten.
 friend.nowOfflineNotification.title={0} ist jetzt offline
 friend.joinedGameNotification.title={0} trat {1} bei
 friend.joinedGameNotification.action=Klicke hier, um ebenfalls beizutreten.
+followed.joinedGameNotification.title=Folge Spieler {0} in das Spiel: {1}...
+followed.joinedGameNotification.action=Klicke hiere, um das Beitreten ABZUBRECHEN.
 
 more=Mehr
 searchResult=Suchergebnis
