Little bug fix, the text of the createGameButton was not updated correctly

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -639,3 +639,5 @@ game.player.rating=One of the player's ratings
 mapVault.ladder=Ladder maps
 news.showLadderMaps=Show ladder maps
 ranked1v1.showMaps=Show ladder maps
+
+game.create.connectivityCheckPending=Connecting
