Fix mod download
Make some adjustments to get mod downloading work
Fixes #717

--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -112,7 +112,7 @@ game.create.reload=Neu laden
 game.create.create=Erstellen
 game.create.searchMap=Suchen\u2026
 game.create.gameType=Spieltyp
-game.create.mods=Mods
+game.create.modVersions=Mods
 game.create.titleMissing=Titel fehlt
 game.create.failed=Spiel konnte nicht erstellt werden.
 game.rehost.failed=Neuerstellen des Spiels fehlgeschlagen.
@@ -123,7 +123,7 @@ game.rating=Rating
 game.joinGameRatingConfirmation.title=Rating nicht im definierten Bereich
 game.joinGameRatingConfirmation.text=Dieses Spiel ist für Spieler mit einem Rating zwischen {0,number,#} und {1,number,#}, dein Rating ist allerdings {2,number,#}.\n\nWillst du dennoch beitreten?
 game.type=Typ
-game.mods=Mods
+game.modVersions=Mods
 game.detail.players.format={0,number,#}/{1,number,#} Spiele
 game.join=Beitreten
 game.cancel=Abbrechen
@@ -154,7 +154,7 @@ login.replayServerHost=Replayserver Host
 login.apiBaseUrl=API Basis-URL
 
 vault.maps=Karten
-vault.mods=Mods
+vault.modVersions=Mods
 modVault.newestMods=Neuste Mods
 modVault.highestRated=Am positivsten
 modVault.highestRatedUiMods=Emfohlene UI Mods
@@ -167,7 +167,7 @@ modVault.upload.chooseDirectory=Wähle den Speicherort der Mod
 modVault.upload=Mod hochladen\u2026
 modVault.upload.title=Mod hochladen
 modVault.upload.hint=Werte werden aus mod_info.lua gelesen
-modVault.upload.modVersion=Version
+modVault.upload.modVersionVersion=Version
 modVault.upload.modUid=UID
 modVault.upload.uploadNow=Jetzt hochladen
 modVault.upload.uploading=Mod wird hochgeladen\u2026
@@ -196,10 +196,8 @@ mapVault.upload.retry=Erneut versuchen
 mapVault.loadingMaps=Lade Karte\u2026
 mapVault.newestMaps=Am neuesten
 mapVault.uninstall=Deinstallieren
-
-
-mod.description=Beschreibung
-mod.comments=Kommentare
+modVersion.description=Beschreibung
+modVersion.comments=Kommentare
 
 map.name=Name
 map.description=Beschreibung
@@ -411,8 +409,7 @@ coop.leaderboard.singlePlayer=1 Spieler
 coop.leaderboard.numberOfPlayersFormat={0,number,#} Spieler
 coop.leaderboard.couldNotLoad=Co-Op Rangliste konnte nicht geladen werden.
 coop.couldNotLoad=Co-Op Missionen konnten nicht geladen werden: {0}
-
-game.mods.twoAndMore={0} und {1,number,#} weitere
+game.modVersions.twoAndMore={0} und {1,number,#} weitere
 
 vault.onlineReplays=Online Replays
 vault.localReplays=Lokale Replays
@@ -587,17 +584,17 @@ search.sort.descending=absteigend
 query.contains=beinhaltet
 search.sort=Sortiere nach
 menu.connect=Verbinde
-mod.displayName=Name
-mod.author=Autor
-mod.uploadedDateTime=Hinzugefügt
-mod.updatedDateTime=Aktualisiert
-mod.id=ID
-mod.uid=UID
-mod.type=Typ
-mod.ranked=Gewertet
-mod.filename=Dateiname
-mod.version=Version
-vault.mods.searchError=Mods konnten nicht geladen werden
+modVersion.displayName=Name
+modVersion.author=Autor
+modVersion.uploadedDateTime=Hinzugefügt
+modVersion.updatedDateTime=Aktualisiert
+modVersion.id=ID
+modVersion.uid=UID
+modVersion.type=Typ
+modVersion.ranked=Gewertet
+modVersion.filename=Dateiname
+modVersion.version=Version
+vault.modVersions.searchError=Mods konnten nicht geladen werden
 noDateAvailable=Kein Datum verfügbar
 map.created=Erstellt:
 modType.ui=Ui Mod
